--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ rtree>=0.9.3
 scikit-image>=0.16.2
 scipy>=1.3.2
 git+git://github.com/toblerity/shapely.git@master#egg=shapely-1.7.1dev
-torchvision>=0.5.0
+torchvision
 tqdm>=4.40.0
 urllib3>=1.25.7
-tensorflow==1.13.1
+tensorflow>=2.7.0
